--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     
 
     <div class="secondary-call-out">
-      <h6>SecondarY&nbsp;Callout</h6>
-      <p style="text-align: left;">These are used to break up text on a page or call-out extremely important information that can't be done with a button or horizontal rule. Use sparingly.</p>
-      <p style="text-align: left;"><a href="/" class="btn btn-secondary">Learn More</a></p>
+      <div class="container">
+        <h6>SecondarY&nbsp;Callout</h6>
+        <p style="text-align: left;">These are used to break up text on a page or call-out extremely important information that can't be done with a button or horizontal rule. Use sparingly.</p>
+        <p style="text-align: left;"><a href="/" class="btn btn-secondary">Learn More</a></p>
+      </div>
     </div>
 
     <!-- Two Column Title Copy -->
