update html examples

--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 
   <div class="container">
 
-    
+    <!-- primary call out -->
+    <div class="primary-call-out" style="text-align: left;">
+      <p>Primary Callout -&nbsp;</p>
+      <p>These are used to break up text on a page or call-out extremely important information that can't be done with a
+        button or horizontal rule. Use sparingly.</p>
+    </div>
 
+    <!-- secondary call out -->
     <div class="secondary-call-out">
       <div class="container">
         <h6>SecondarY&nbsp;Callout</h6>
-        <p style="text-align: left;">These are used to break up text on a page or call-out extremely important information that can't be done with a button or horizontal rule. Use sparingly.</p>
+        <p style="text-align: left;">These are used to break up text on a page or call-out extremely important
+          information that can't be done with a button or horizontal rule. Use sparingly.</p>
         <p style="text-align: left;"><a href="/" class="btn btn-secondary">Learn More</a></p>
       </div>
     </div>
