--- a/index.html
+++ b/index.html
@@ -25,29 +25,32 @@
       <p>Explore breakthrough topics reshaping alliance management, including AI and digital transformation, new alliance models, complex multi-partner ecosystems, and much more.</p>
       <p></p>
       <h6 id="menu">Menu</h6>
-      <div class="grid-container cols-1-3 bg-white is-sticky--desktop-menu">
-      <div class="grid-item" style="background-color: #fff !important;">
-      <ul>
-      <li><a href="#committee">Conference Planning Committee</a></li>
-      <li><a href="#speakers">Speakers</a></li>
-      <li><a href="#program">Conference Program</a></li>
-      </ul>
+      <div class="is-sticky--desktop-menu">
+        <div class="grid-container cols-1-3 bg-white">
+          <div class="grid-item" style="background-color: #fff !important;">
+          <ul>
+          <li><a href="#committee">Conference Planning Committee</a></li>
+          <li><a href="#speakers">Speakers</a></li>
+          <li><a href="#program">Conference Program</a></li>
+          </ul>
+          </div>
+          <div class="grid-item" style="background-color: #fff !important;">
+          <ul>
+          <li><a href="#registration">Registration</a></li>
+          <li><a href="#hotel">Hotel &amp; Travel</a></li>
+          <li><a href="#credits">Professional Development Credits</a></li>
+          </ul>
+          </div>
+          <div class="grid-item" style="background-color: #fff !important;">
+          <ul>
+          <li><a href="#sponsors">Sponsors</a></li>
+          <li><a href="#community">ASAP Community</a></li>
+          <li><a href="#future">Future BioPharma Conference</a></li>
+          </ul>
+          </div>
+          </div>
       </div>
-      <div class="grid-item" style="background-color: #fff !important;">
-      <ul>
-      <li><a href="#registration">Registration</a></li>
-      <li><a href="#hotel">Hotel &amp; Travel</a></li>
-      <li><a href="#credits">Professional Development Credits</a></li>
-      </ul>
-      </div>
-      <div class="grid-item" style="background-color: #fff !important;">
-      <ul>
-      <li><a href="#sponsors">Sponsors</a></li>
-      <li><a href="#community">ASAP Community</a></li>
-      <li><a href="#future">Future BioPharma Conference</a></li>
-      </ul>
-      </div>
-      </div>
+      
       <div class="primary-call-out">
       <p>To help secure approval for your participation, we've prepared a customizable justification template highlighting the tangible ROI this conference offers to you and your organization.</p>
       <p><a href="/novi-file-uploads/asap/pdfs-and-documents/2025-asap-biopharma-justification-letter.docx" class="btn-primary btn">Download</a></p>
