--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="well box inner-content" id="top">
 
-      <div class="is-sticky--desktop-menu">
+      <!-- <div class="is-sticky--desktop-menu">
         <div class="container">
           <h6 id="menu">Menu</h6>
           <div class="grid-container cols-2-4 bg-white small-text">
@@ -48,7 +48,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <novi-content-wrapper>
         <h6>November 17–19, 2025 | Boston, MA</h6>
